update tutorial website

--- a/tutorial-AAAI26/docs/css/academic.css
+++ b/tutorial-AAAI26/docs/css/academic.css
@@ -1,6 +1,6 @@
 /* Academic conference website styling */
 body { 
-    font-family: 'Georgia', serif; 
+    font-family: 'Roboto', sans-serif; 
     line-height: 1.6; 
     color: #333;
 }
